--- a/arch/x86/mm/asan/Makefile
+++ b/arch/x86/mm/asan/Makefile
@@ -1,2 +1,1 @@
-obj-y := asan.o libc.o mapping.o poisoning.o quarantine.o report.o rtl.o \
-	 sample_errors.o stack_trace.o thread.o
+obj-y := asan.o libc.o report.o test.o
